plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'
description = 'Lucky-Burger'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        // Spring Cloud AWS의 버전을 관리해주는 BOM
        // Spring Boot 3.5.x 와 호환
        mavenBom "io.awspring.cloud:spring-cloud-aws-dependencies:3.4.0"
    }
}

dependencies {
    // [Spring Boot Starter]
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // [actuator]
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // [prometheus]
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // [metrics]
    implementation 'io.micrometer:micrometer-core'

    // [redis]
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    // [OpenSource]
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JSON 처리용

    //[jackson]
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    // [AWS]
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-parameter-store'

    // [DB]
    runtimeOnly 'com.mysql:mysql-connector-j'

    // [Compile & Runtime]
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // [Test]
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'net.datafaker:datafaker:2.2.2'

    // [Cache]
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine'
}

tasks.named('test') {
    useJUnitPlatform()
}
